Solved PIE Gate and Dscan averaging, in definitions file is ifrog missing

--- a/some_definitions_and_formulas.ipynb
+++ b/some_definitions_and_formulas.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "\n",
     "4. 2D-SI  \n",
-    "    $S_{mk} = () \\cdot G()$"
+    "    $S_{mk} = (A_k + A_{mk}') \\cdot G(E_k)$"
    ]
   },
   {
@@ -188,10 +188,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8d5a4f8",
+   "metadata": {},
+   "source": [
+    "### X-Frog (with respect to Pulse)  \n",
+    "\n",
+    "Same for all nonlinear methods  \n",
+    "\n",
+    "$\\frac{dS_{mk}}{dE_n^*} = 0 $  \n",
+    "\n",
+    "$\\frac{dS_{mk}}{dE_n} = D_{kn} G(A_{mk}) $\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1e9f9ef7",
    "metadata": {},
    "source": [
-    "### Frog (with respect to Gate Pulse)\n",
+    "### X-Frog (with respect to Gate Pulse)\n",
     "\n",
     "$\\frac{dS_{mk}}{dE_n} = \\frac{dS_{mk}}{dA_{mk}}\\frac{dA_{mk}}{dE_n}$  \n",
     "\n",
@@ -269,9 +283,9 @@
    "source": [
     "$H_{zz} = U_{zz} - V_{zz}$  \n",
     "\n",
-    "$U_{zz} = \\frac{1}{2}\\cdot\\sum_k\\left(\\left(\\frac{dS_{mk}}{dE_p}\\right)^*\\frac{dS_{mk}}{dE_n^*} + \\left(\\left(\\frac{dS_{mk}}{dE_p^*}\\right)^*\\frac{dS_{mk}}{dE_n}\\right)^*\\right)$  \n",
+    "$U_{zz}^m = \\frac{1}{2}\\cdot\\sum_k\\left(\\left(\\frac{dS_{mk}}{dE_p}\\right)^*\\frac{dS_{mk}}{dE_n} + \\left(\\left(\\frac{dS_{mk}}{dE_p^*}\\right)^*\\frac{dS_{mk}}{dE_n^*}\\right)^*\\right)$  \n",
     "\n",
-    "$V_{zz} = \\frac{1}{2}\\cdot\\sum_k\\left( \\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^*\\cdot \\Delta S_{mk} + \\left(\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^*\\cdot \\Delta S_{mk}\\right)^* \\right)$"
+    "$V_{zz}^m = \\frac{1}{2}\\cdot\\sum_k\\left( \\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^*\\cdot \\Delta S_{mk} + \\left(\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^*\\cdot \\Delta S_{mk}\\right)^* \\right)$"
    ]
   },
   {
@@ -309,10 +323,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "867679ba",
+   "metadata": {},
+   "source": [
+    "### X-Frog (with respect to Pulse)  \n",
+    "\n",
+    "Same for all nonlinear methods.  \n",
+    "\n",
+    "$V_{zz} = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "afedb981",
    "metadata": {},
    "source": [
-    "### Frog (with respect to Gate Pulse)\n",
+    "### X-Frog (with respect to Gate Pulse)\n",
     "\n",
     "1. SHG  \n",
     "    $V_{zz} = 0$\n",
@@ -348,19 +374,23 @@
     "### DScan (with respect to pulse)\n",
     "\n",
     "1. SHG  \n",
+    "\n",
+    "    $V_{zz}=0$\n",
+    "    \n",
     "    \n",
     "<br>\n",
     "\n",
     "2. THG  \n",
     "\n",
+    "    $V_{zz}=0$\n",
+    "\n",
     "<br>\n",
     "\n",
-    "3. PG  \n",
-    "   \n",
-    "<br>\n",
+    "3. PG/SD\n",
     "\n",
-    "4. SD  \n",
-    "    "
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2D_{nk}D_{kp} A_{mk}^* e^{-i z_m k_n} e^{i z_m k_p}$\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2D_{kn}D_{pk} A_{mk}^* e^{i z_m k_n} e^{-i z_m k_p}$"
    ]
   },
   {
@@ -372,16 +402,152 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e55a723",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "9294e3a5",
+   "metadata": {},
+   "source": [
+    "PIE ultimately assumes independent Object and Probe. This is respected in these derivatives.  \n",
+    "\n",
+    "$\\frac{dL_m}{dx_k^*} = -2 \\cdot \\sum_n (\\sqrt{T_{mn}^{\\mathrm{exp}}}- |S_{mn}|) \\cdot \\frac{S_{mn}}{2|S_{mn}|}\\cdot D_{kn} \\left(\\frac{dS_{mk}}{dx_k}\\right)^* = -1 \\cdot \\Delta S_{mk} \\cdot \\left(\\frac{dS_{mk}}{dx_k}\\right)^*$    \n",
+    "\n",
+    "$P_{mk} = G(A_{mk})$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fb3b4ed",
+   "metadata": {},
+   "source": [
+    "### With respect to Object (Frog)\n",
+    "\n",
+    "Same for all nonlinear methods  \n",
+    "\n",
+    "$\\frac{dL_m}{dE_k^*} = -1\\cdot P_{mk}^*\\cdot \\Delta S_{mk}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53fd458d",
+   "metadata": {},
+   "source": [
+    "### With respect to Probe-Pulse (X-Frog)\n",
+    "\n",
+    "1. SHG  \n",
+    "\n",
+    "    $\\frac{dL_m}{dA_{mk}^*} = -1\\cdot E_k^*\\cdot \\Delta S_{mk}$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "\n",
+    "    $\\frac{dL_m}{dA_{mk}^*} = -1\\cdot E_k^*\\cdot 2A_{mk}^*\\cdot \\Delta S_{mk}$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG  \n",
+    "\n",
+    "    $\\frac{dL_m}{dA_{mk}^*} = -1\\cdot E_k^*\\cdot A_{mk} \\cdot \\Delta S_{mk}$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "4. SD  \n",
+    "\n",
+    "    $\\frac{dL_m}{dA_{mk}^*} = -1\\cdot E_{k}^*\\cdot 2 A_{mk} \\cdot \\Delta S_{mk}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d999b178",
+   "metadata": {},
+   "source": [
+    "### With respect to Object (DScan)\n",
+    "\n",
+    "Same for all nonlinear methods  \n",
+    "\n",
+    "$\\frac{dL_m}{dA_{mk}^*} = -1\\cdot P_{mk}^*\\cdot \\Delta S_{mk}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f08849e6",
+   "metadata": {},
+   "source": [
+    "## PIE - Pseudo Hessian"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1072341",
+   "metadata": {},
+   "source": [
+    "$H_{zz} = U_{zz} - V_{zz}$  \n",
+    "\n",
+    "$U_{zz}^m = \\frac{1}{2}\\cdot\\sum_n\\left(\\left(\\frac{d|S_{mn}|}{dE_j}\\right)^*\\frac{d|S_{mn}|}{dE_k} + \\left(\\left(\\frac{d|S_{mn}|}{dE_j^*}\\right)^*\\frac{d|S_{mn}|}{dE_k^*}\\right)^*\\right)$  \n",
+    "\n",
+    "$V_{zz}^m = \\frac{1}{2}\\cdot\\sum_n\\left( \\frac{d}{dE_k}\\left(\\frac{d|S_{mn}|}{dE_j}\\right)^*\\cdot (\\sqrt{T_{mn}^{\\mathrm{exp}}} - |S_{mn}|) + \\left(\\frac{d}{dE_k^*}\\left(\\frac{d|S_{mn}|}{dE_j^*}\\right)^*\\cdot (\\sqrt{T_{mn}^{\\mathrm{exp}}} - |S_{mn}|)\\right)^* \\right)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c72d6b04",
+   "metadata": {},
+   "source": [
+    "### Frog (with respect to Pulse)\n",
+    "\n",
+    "Same for all nonlinear methods  \n",
+    "\n",
+    "$\\frac{d|S_{mn}|}{dE_k^*} = \\frac{S_{mn}}{2|S_{mn}|} \\cdot D_{kn} P_{mk}^*$  \n",
+    "\n",
+    "$\\frac{d}{dE_j}\\left(\\frac{d|S_{mn}|}{dE_k}\\right)^* = \\frac{1}{4}D_{kn}D_{nj} P_{mk}^*P_{mj}\\cdot\\frac{1}{|S_{mn}|}$  \n",
+    "\n",
+    "$\\frac{d}{dE_j^*}\\left(\\frac{d|S_{mn}|}{dE_k^*}\\right)^* = \\frac{1}{4}D_{jn}D_{nk} P_{mk}P_{mj}^*\\cdot\\frac{1}{|S_{mn}|}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "625c5b72",
+   "metadata": {},
+   "source": [
+    "### X-Frog (with respect to Gate Pulse)\n",
+    "\n",
+    "Not the same for all nonlinear methods.\n",
+    "\n",
+    "$\\frac{d|S_{mn}|}{dA_{mk}^*} = \\frac{S_{mn}}{2|S_{mn}|} \\cdot \\left(\\frac{dS_{mn}}{dA_{mk}}\\right)^* = \\frac{S_{mn}}{2|S_{mn}|} \\cdot D_{kn} E_k^* \\cdot \\left(\\frac{dP_{mk}}{dA_{mk}}\\right)^*$  \n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$\\frac{d}{dA_{mj}}\\left(\\frac{d|S_{mn}|}{dA_{mk}}\\right)^* = \\frac{1}{4}D_{kn}D_{nj} E_{k}^*E_{j}\\cdot\\frac{1}{|S_{mn}|} \\cdot \\left(\\frac{dP_{mk}}{dA_{mk}}\\right)^* \\frac{dP_{mj}}{dA_{mj}}$  \n",
+    "\n",
+    "$\\frac{d}{dA_{mj}^*}\\left(\\frac{d|S_{mn}|}{dA_{mk}^*}\\right)^* = \\frac{1}{4}D_{jn}D_{nk} E_{k}E_{j}^*\\cdot\\frac{1}{|S_{mn}|}\\cdot \\frac{dP_{mk}}{dA_{mk}} \\left(\\frac{dP_{mj}}{dA_{mj}}\\right)^*$\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "1. SHG: $\\frac{dP_{mk}}{dA_{mk}} = 1$  \n",
+    "\n",
+    "1. THG: $\\frac{dP_{mk}}{dA_{mk}} = 2A_{mk}$  \n",
+    "\n",
+    "1. PG: $\\frac{dP_{mk}}{dA_{mk}} = A_{mk}^*$  \n",
+    "\n",
+    "1. SD: $\\frac{dP_{mk}}{dA_{mk}^*} = 2A_{mk}^*$  (the conjugate is no mistake, the other wirtinger derivative is zero. Doesnt matter since the hessian is hermitian.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2852ea8e",
+   "metadata": {},
+   "source": [
+    "### Dscan (with respect to Pulse) -> is the same as Frog\n",
+    "\n",
+    "Same for all nonlinear methods\n",
+    "\n",
+    "$\\frac{d|S_{mn}|}{dA_{mk}^*} = \\frac{S_{mn}}{2|S_{mn}|} \\cdot D_{kn} P_{mk}^*$  \n",
+    "\n",
+    "$\\frac{d}{dA_{mj}}\\left(\\frac{d|S_{mn}|}{dA_{mk}}\\right)^* = \\frac{1}{4}D_{jn}D_{nk} P_{mj}^*P_{mk}\\cdot\\frac{1}{|S_{mn}|}$  \n",
+    "\n",
+    "$\\frac{d}{dA_{mj}^*}\\left(\\frac{d|S_{mn}|}{dA_{mk}^*}\\right)^* = \\frac{1}{4}D_{kn}D_{nj} P_{mj}P_{mk}^*\\cdot\\frac{1}{|S_{mn}|}$"
+   ]
   }
  ],
  "metadata": {
