Generalized COPRA strategies to GP and PIE, some cleaning/ordering in descent_info

--- a/some_definitions_and_formulas.ipynb
+++ b/some_definitions_and_formulas.ipynb
@@ -548,6 +548,60 @@
     "\n",
     "$\\frac{d}{dA_{mj}^*}\\left(\\frac{d|S_{mn}|}{dA_{mk}^*}\\right)^* = \\frac{1}{4}D_{kn}D_{nj} P_{mj}P_{mk}^*\\cdot\\frac{1}{|S_{mn}|}$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6580632",
+   "metadata": {},
+   "source": [
+    "# Update nonlinear Signal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "353d389d",
+   "metadata": {},
+   "source": [
+    "### 1. Via Projection (Standard way)  \n",
+    "\n",
+    "$S_{mk}' = \\mathrm{IFFT}\\{ \\mathrm{sgn}(T_{mn}^{\\mathrm{exp}})\\sqrt{|T_{mn}^{\\mathrm{exp}}|} \\cdot \\frac{S_{mn}}{|S_{mn}|}\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a6ab23e",
+   "metadata": {},
+   "source": [
+    "### 2. Via Descent (COPRA method)  \n",
+    "\n",
+    "$S_{mk}' = S_{mk} - \\alpha\\eta\\cdot\\nabla_{mk}r$  \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$r=\\sum_n(T_{mn}^{\\mathrm{exp}} - \\mu T_{mn})^2$  \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$\\frac{dr}{dS_{mk}^*} = -2\\mu \\sum_n D_{kn} (T_{mn}^{\\mathrm{exp}} - \\mu T_{mn})\\cdot S_{mn}$  \n",
+    "\n",
+    "\n",
+    "$H_{zz} = \\sum_n D_{kn}D_{nj} (2\\mu T_{mn} - T_{mn}^{\\mathrm{exp}})$  \n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "3. Alternative definition of r-error  \n",
+    "\n",
+    "$r=\\sum_n(\\sqrt{T_{mn}^{\\mathrm{exp}}} - \\mu |S_{mn}|)^2$  \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$\\frac{dr}{dS_{mk}^*} = -2\\mu \\sum_n D_{kn} (\\sqrt{T_{mn}^{\\mathrm{exp}}}\\cdot\\frac{S_{mn}}{|S_mn|} - S_{mn})$  -> is essentially the projection but averaged/damped if stepsize is not 1\n",
+    "\n",
+    "\n",
+    "$H_{zz} = \\sum_n D_{kn}D_{nj}$  "
+   ]
   }
  ],
  "metadata": {
