Implemented ifrog Z-grad/hessian, frog and dscan base class for real fields

--- a/some_definitions_and_formulas.ipynb
+++ b/some_definitions_and_formulas.ipynb
@@ -243,6 +243,93 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e9d783e",
+   "metadata": {},
+   "source": [
+    "### I-Frog (with respect to pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}(1+e^{-i\\tau_m\\omega_n})\\cdot (E_k + A_{mk})$\n",
+    "    \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 3D_{kn}(1+e^{-i\\tau_m\\omega_n})\\cdot (E_k + A_{mk})^2$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk}(1+e^{i\\tau_m\\omega_n})\\cdot (E_k + A_{mk})^2$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}(1+e^{-i\\tau_m\\omega_n})\\cdot |E_k + A_{mk}|^2$\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71b66024",
+   "metadata": {},
+   "source": [
+    "### I-Frog + XFrog (with respect to pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}(E_k + A_{mk})$\n",
+    "    \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 3D_{kn} (E_k + A_{mk})^2$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk}(E_k + A_{mk})^2$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}|E_k + A_{mk}|^2$\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b7ac43b",
+   "metadata": {},
+   "source": [
+    "### I-Frog + XFrog (with respect to \"gate\"pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}e^{-i\\tau_m\\omega_n}(E_k + A_{mk})$\n",
+    "    \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 3D_{kn}e^{-i\\tau_m\\omega_n}(E_k + A_{mk})^2$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk}e^{i\\tau_m\\omega_n}(E_k + A_{mk})^2$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}e^{-i\\tau_m\\omega_n}|E_k + A_{mk}|^2$\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3272f9d4",
    "metadata": {},
    "source": [
@@ -363,6 +450,78 @@
     "\n",
     "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 0$\n",
     "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "062b0c15",
+   "metadata": {},
+   "source": [
+    "### I-Frog (with respect to pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $V_{zz} = 0$\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "   $V_{zz} = 0$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2D_{nk}D_{kp} (E_k+A_{mk})^* (1+e^{i\\tau_m\\omega_n}) (1+e^{-i\\tau_m\\omega_p}) $\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2D_{kn}D_{pk} (E_k+A_{mk})^* (1+e^{-i\\tau_m\\omega_n}) (1+e^{i\\tau_m\\omega_p})$\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9044f91",
+   "metadata": {},
+   "source": [
+    "### I-Frog + XFrog (with respect to pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $V_{zz} = 0$\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "   $V_{zz} = 0$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2D_{nk}D_{kp} (E_k+A_{mk})^*$\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2D_{kn}D_{pk} (E_k+A_{mk})^*$\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "836a4e65",
+   "metadata": {},
+   "source": [
+    "### I-Frog + XFrog (with respect to \"gate\"pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $V_{zz} = 0$\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "   $V_{zz} = 0$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2D_{nk}D_{kp} (E_k+A_{mk})^* e^{i\\tau_m\\omega_n}e^{-i\\tau_m\\omega_p}$\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2D_{kn}D_{pk} (E_k+A_{mk})^*e^{-i\\tau_m\\omega_n}e^{i\\tau_m\\omega_p}$\n",
     "    "
    ]
   },
@@ -530,7 +689,7 @@
     "\n",
     "1. PG: $\\frac{dP_{mk}}{dA_{mk}} = A_{mk}^*$  \n",
     "\n",
-    "1. SD: $\\frac{dP_{mk}}{dA_{mk}^*} = 2A_{mk}^*$  (the conjugate is no mistake, the other wirtinger derivative is zero. Doesnt matter since the hessian is hermitian.)"
+    "1. SD: $\\frac{dP_{mk}}{dA_{mk}^*} = 2A_{mk}^*$  (the conjugate is no mistake, the other wirtinger derivative is zero. Doesnt matter since the hessian is hermitian. At least i suspect it doesnt. Needs testing/careful implementation)"
    ]
   },
   {
