Disabled Amk-hessian in pie. Its not working. Diagonal seems fine.

--- a/some_definitions_and_formulas.ipynb
+++ b/some_definitions_and_formulas.ipynb
@@ -689,7 +689,7 @@
     "\n",
     "1. PG: $\\frac{dP_{mk}}{dA_{mk}} = A_{mk}^*$  \n",
     "\n",
-    "1. SD: $\\frac{dP_{mk}}{dA_{mk}^*} = 2A_{mk}^*$  (the conjugate is no mistake, the other wirtinger derivative is zero. Doesnt matter since the hessian is hermitian. At least i suspect it doesnt. Needs testing/careful implementation)"
+    "1. SD: $\\frac{dP_{mk}^*}{dA_{mk}} = 2A_{mk}$  (the conjugate is no mistake, the other wirtinger derivative is zero.)"
    ]
   },
   {
