All classical algorithms for 2dsi are implemented but untested

--- a/some_definitions_and_formulas.ipynb
+++ b/some_definitions_and_formulas.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "4. 2D-SI  \n",
     "    $S_{mk} = (A_k + A_{mk}') \\cdot G(E_k)$  \n",
-    "    All solvers (except DirectReconstruction) assume that $A_{mk}'$ is a shifted copy of $A_k$ "
+    "    All solvers (except DirectReconstruction, xfrog=True) assume that $A_{mk}'$ is a shifted copy of $A_k$ "
    ]
   },
   {
