Copied cpcgpa into frog algorithms

--- a/some_definitions_and_formulas.ipynb
+++ b/some_definitions_and_formulas.ipynb
@@ -84,9 +84,11 @@
     "3. Method dependent transformation  \n",
     "    $ A_{mk} = \\sum_n D_{kn} E_n \\cdot e^{i\\phi_{mn}}$  \n",
     "\n",
-    "    $\\phi_{mn} = -\\tau_m \\cdot \\omega_n$  \n",
+    "    $\\phi_{mn} = -\\tau_m \\cdot \\omega_n$ (linear -> time shift)  \n",
     "\n",
-    "    $\\phi_{mn} = z_m \\cdot k_n$"
+    "    $\\phi_{mn} = z_m \\cdot k_n$ (material dispersion)  \n",
+    "\n",
+    "    $\\phi_{mn} = f(z_m, \\omega_n)$ (arbitrary phase, through pulse shaper)"
    ]
   },
   {
@@ -305,7 +307,7 @@
    "id": "2b7ac43b",
    "metadata": {},
    "source": [
-    "### I-Frog + XFrog (with respect to \"gate\"pulse)\n",
+    "### I-Frog + XFrog (with respect to gate-pulse)\n",
     "\n",
     "1. SHG  \n",
     "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
@@ -339,21 +341,21 @@
     "1. SHG  \n",
     "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
     "\n",
-    "    $\\frac{dS_{mk}}{dE_n} = 2 D_{kn} A_{mk} e^{iz_m k_n}$\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2 D_{kn} A_{mk} e^{i\\phi_{mn}}$\n",
     "\n",
     "<br>\n",
     "\n",
     "2. THG  \n",
     "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
     "\n",
-    "    $\\frac{dS_{mk}}{dE_n} = 3 D_{kn} A_{mk}^2 e^{iz_m k_n}$\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 3 D_{kn} A_{mk}^2 e^{i\\phi_{mn}}$\n",
     "\n",
     "<br>\n",
     "\n",
     "3. PG/SD  \n",
-    "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk} A_{mk}^2 e^{-iz_m k_n}$  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk} A_{mk}^2 e^{-i\\phi_{mn}}$  \n",
     "\n",
-    "    $\\frac{dS_{mk}}{dE_n} = 2 D_{kn} |A_{mk}|^2 e^{iz_m k_n}$"
+    "    $\\frac{dS_{mk}}{dE_n} = 2 D_{kn} |A_{mk}|^2 e^{i\\phi_{mn}}$"
    ]
   },
   {
@@ -597,9 +599,9 @@
     "\n",
     "3. PG/SD\n",
     "\n",
-    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2D_{nk}D_{kp} A_{mk}^* e^{-i z_m k_n} e^{i z_m k_p}$\n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2D_{nk}D_{kp} A_{mk}^* e^{-i \\phi_{mn}} e^{i \\phi_{mp}}$\n",
     "\n",
-    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2D_{kn}D_{pk} A_{mk}^* e^{i z_m k_n} e^{-i z_m k_p}$"
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2D_{kn}D_{pk} A_{mk}^* e^{i \\phi_{mn}} e^{-i \\phi_{mp}}$"
    ]
   },
   {
@@ -881,6 +883,7 @@
    "metadata": {},
    "source": [
     "Expansion of error-function as taylor series. (Like COPRA-Paper or CR-Calculus chapter)  \n",
+    "\n",
     "<br>\n",
     "1. Order  \n",
     "$L'=L + 2\\cdot \\Re\\left\\{\\sum_n (E_n'-E_n)^\\dag \\nabla_nL\\right\\}$  \n",
@@ -930,7 +933,7 @@
    "source": [
     "### Based on Pade-Approximation  \n",
     "\n",
-    "Question: Is the fact that for R01 and R02 s cannot be zero an issue? -> maybe this prevents that one reaches the optimal solution? Is \"solved\" by setting L'=-L as in copra."
+    "Question: Is the fact that for R01 and R02 s cannot be zero an issue? -> maybe this prevents that one reaches the optimal solution?  "
    ]
   },
   {
