2DSI has now filter, started adding vampire, pcgpa is working

--- a/some_definitions_and_formulas.ipynb
+++ b/some_definitions_and_formulas.ipynb
@@ -46,21 +46,21 @@
     "### General\n",
     "\n",
     "Indices:  \n",
-    "    k,j -> Time Domain  \n",
-    "    n,p -> Frequency Domain  \n",
-    "    <br>\n",
-    "    m -> Transformation (e.g. shift in time, applied chirp, ... )\n",
+    "$\\quad k,j\\quad\\rightarrow\\quad$ Time Domain  \n",
+    "$\\quad n,p\\quad\\rightarrow\\quad$ Frequency Domain  \n",
+    "$\\quad m\\quad\\rightarrow\\quad$ Transformation (e.g. shift in time, applied chirp, ... )\n",
     "\n",
     "<br>\n",
     "\n",
-    "Ek -> pulse in time domain  \n",
-    "Amk -> transformed pulse in time domain  \n",
-    "    -> transformation is done in frequency domain by multiplication with exp(-1j*tau*omega) or exp(1j*z*k(omega))      \n",
+    "$E_k\\quad\\rightarrow\\quad$ pulse in time domain  \n",
+    "$A_{mk}\\quad\\rightarrow\\quad$ transformed pulse in time domain  \n",
+    "$\\quad\\rightarrow\\quad$ transformation is done in frequency domain by multiplication with $e^{-i\\tau_m\\omega_n}$ or $e^{i\\phi_{mn}}$    \n",
     "\n",
     "<br>\n",
-    "Dkn -> fourier matrix (inverse)  \n",
     "\n",
-    "Dnk -> fourier matrix (forward)"
+    "$D_{kn} \\quad\\rightarrow\\quad $ fourier matrix (inverse)  \n",
+    "\n",
+    "$D_{nk} \\quad\\rightarrow\\quad $ fourier matrix (forward)"
    ]
   },
   {
@@ -110,8 +110,13 @@
     "\n",
     "\n",
     "4. 2D-SI  \n",
-    "    $S_{mk} = (A_k + A_{mk}') \\cdot G(E_k)$  \n",
-    "    All solvers (except DirectReconstruction, xfrog=True) assume that $A_{mk}'$ is a shifted copy of $A_k$ "
+    "    $S_{mk} = G(E_k' + E_{mk}'') \\cdot E_k$  \n",
+    "    $E_k' = \\sum_n D_{kn}B_n E_n\\quad$ ($B_n$ represents a bandpass filter)\n",
+    "\n",
+    "\n",
+    "5. Vampire  \n",
+    "    $S_{mk} = G(E_k + E_k') \\cdot A_{mk}$  \n",
+    "    $E_k' = \\sum_n D_{kn}E_ne^{i\\phi_n}\\quad$ ($\\phi_n$ represents a material dispersion)"
    ]
   },
   {
@@ -360,12 +365,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eea84892",
+   "metadata": {},
+   "source": [
+    "### 2D-SI (with respect to pulse $E_k$)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = D_{kn}\\left((E_k'+A_{mk}'')+E_k\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')\\right)$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = D_{kn}\\left((E_k'+A_{mk}'')^2+2E_k\\cdot(E_k'+A_{mk}'')(B_n'+e^{-i\\tau_m\\omega_n}B_n'')\\cdot E_k\\right)$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk}E_k(E_k'+A_{mk}'')\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')^*$\n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = D_{kn}\\left(|E_k'+A_{mk}''|^2 + E_k\\cdot(E_k'+A_{mk}'')^*\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')\\right)$  \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "4. SD  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 2D_{nk}E_k\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')^*\\cdot(E_k' + A_{mk}'')^*$\n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = D_{kn}\\left((E_k'+A_{mk}'')^*\\right)^2 $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "296ed720",
    "metadata": {},
    "source": [
-    "### 2D-SI (with respect to pulse, Auto- or cross-correlation setup)\n",
+    "### 2D-SI (with respect to pulse, cross-correlation setup)\n",
     "\n",
-    "Same for all nonlinear methods -> does not include dependence $G(E_k)$ even for auto-correlation  \n",
+    "Same for all nonlinear methods\n",
     "\n",
     "$\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
     "\n",
@@ -377,33 +416,31 @@
    "id": "46569b6e",
    "metadata": {},
    "source": [
-    "### 2D-SI (with respect to gate-pulse $A_k$)\n",
-    "\n",
-    "Assumes that both pulses in gate are the same -> not true in actual 2D-SI\n",
+    "### 2D-SI (with respect to gate-pulse $A_k/A_{mk}$)\n",
     "\n",
     "1. SHG  \n",
     "    $\\frac{dS_{mk}}{dA_n^*} = 0$  \n",
     "\n",
-    "    $\\frac{dS_{mk}}{dA_n} = D_{kn}E_k\\cdot(1+e^{-i\\tau_m\\omega_n})$\n",
+    "    $\\frac{dS_{mk}}{dA_n} = D_{kn}E_k\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')$\n",
     "\n",
     "<br>\n",
     "\n",
     "2. THG  \n",
     "    $\\frac{dS_{mk}}{dA_n^*} = 0$  \n",
     "\n",
-    "    $\\frac{dS_{mk}}{dA_n} = 2D_{kn}E_k\\cdot(1+e^{-i\\tau_m\\omega_n})\\cdot(A_k + A_{mk})$\n",
+    "    $\\frac{dS_{mk}}{dA_n} = 2D_{kn}E_k\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')\\cdot(A_k + A_{mk})$\n",
     "\n",
     "<br>\n",
     "\n",
     "3. PG  \n",
-    "    $\\frac{dS_{mk}}{dA_n^*} = D_{nk}E_k\\cdot(1+e^{i\\tau_m\\omega_n})\\cdot(A_k + A_{mk})$  \n",
+    "    $\\frac{dS_{mk}}{dA_n^*} = D_{nk}E_k\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')^*\\cdot(A_k + A_{mk})$  \n",
     "\n",
-    "    $\\frac{dS_{mk}}{dA_n} = D_{kn}E_k\\cdot(1+e^{-i\\tau_m\\omega_n})\\cdot(A_k + A_{mk})^*$\n",
+    "    $\\frac{dS_{mk}}{dA_n} = D_{kn}E_k\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')\\cdot(A_k + A_{mk})^*$\n",
     "\n",
     "<br>\n",
     "\n",
     "4. SD  \n",
-    "    $\\frac{dS_{mk}}{dA_n^*} = 2D_{kn}E_k\\cdot(1+e^{i\\tau_m\\omega_n})\\cdot(A_k + A_{mk})^*$\n",
+    "    $\\frac{dS_{mk}}{dA_n^*} = 2D_{nk}E_k\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')^*\\cdot(A_k + A_{mk})^*$\n",
     "\n",
     "    $\\frac{dS_{mk}}{dA_n} = 0 $"
    ]
@@ -423,9 +460,9 @@
    "source": [
     "$H_{zz} = U_{zz} - V_{zz}$  \n",
     "\n",
-    "$U_{zz}^m = \\frac{1}{2}\\cdot\\sum_k\\left(\\left(\\frac{dS_{mk}}{dE_p}\\right)^*\\frac{dS_{mk}}{dE_n} + \\left(\\left(\\frac{dS_{mk}}{dE_p^*}\\right)^*\\frac{dS_{mk}}{dE_n^*}\\right)^*\\right)$  \n",
+    "$U_{zz}^m = \\frac{1}{2}\\cdot\\sum_k\\left(\\left(\\frac{dS_{mk}}{dE_n}\\right)^*\\frac{dS_{mk}}{dE_p} + \\left(\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^*\\frac{dS_{mk}}{dE_p^*}\\right)^*\\right)$  \n",
     "\n",
-    "$V_{zz}^m = \\frac{1}{2}\\cdot\\sum_k\\left( \\frac{d}{dE_n}\\left(\\frac{dS_{mk}}{dE_p}\\right)^*\\cdot \\Delta S_{mk} + \\left(\\frac{d}{dE_n^*}\\left(\\frac{dS_{mk}}{dE_p^*}\\right)^*\\cdot \\Delta S_{mk}\\right)^* \\right)$"
+    "$V_{zz}^m = \\frac{1}{2}\\cdot\\sum_k\\left( \\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^*\\cdot \\Delta S_{mk} + \\left(\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^*\\cdot \\Delta S_{mk}\\right)^* \\right)$"
    ]
   },
   {
@@ -559,7 +596,7 @@
    "id": "836a4e65",
    "metadata": {},
    "source": [
-    "### I-Frog + XFrog (with respect to \"gate\"pulse)\n",
+    "### I-Frog + XFrog (with respect to gate-pulse)\n",
     "\n",
     "1. SHG  \n",
     "    $V_{zz} = 0$\n",
@@ -606,25 +643,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c419571",
+   "id": "54c052c5",
    "metadata": {},
    "source": [
-    "### 2D-SI (with respect to pulse, Auto- or cross-correlation setup)\n",
-    "\n",
-    "Same for all nonlinear methods -> does not include dependence $G(E_k)$ even for auto-correlation  \n",
-    "\n",
-    "$V_{zz} = 0$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ef8ecf7d",
-   "metadata": {},
-   "source": [
-    "### 2D-SI (with respect to gate-pulse $A_{k/n}$)\n",
-    "\n",
-    "Assumes that both pulses in gate are the same -> not true in actual 2D-SI\n",
-    "\n",
+    "### 2D-SI (with respect to pulse, autocorrelation setup)\n",
     "\n",
     "1. SHG  \n",
     "\n",
@@ -640,9 +662,55 @@
     "\n",
     "3. PG\n",
     "\n",
-    "    $\\frac{d}{dA_p}\\left(\\frac{dS_{mk}}{dA_n}\\right)^* = D_{nk}D_{kp}\\cdot(1+e^{i\\tau_m\\omega_n})(1+e^{-i\\tau_m\\omega_p})\\cdot E_k^*$\n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = D_{nk}D_{kp}\\cdot\\left((E_k'+A_{mk}'')^*(B_p'+B_p''e^{-i\\tau_m\\omega_p}) + E_k^*(B_n'+B_n''e^{-i\\tau_m\\omega_n})^*(B_p'+B_p''e^{-i\\tau_m\\omega_p})\\right)$\n",
     "\n",
-    "    $\\frac{d}{dA_p^*}\\left(\\frac{dS_{mk}}{dA_n^*}\\right)^* = D_{kn}D_{pk}\\cdot(1+e^{-i\\tau_m\\omega_n})(1+e^{i\\tau_m\\omega_p})\\cdot E_k^*$\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = D_{pk}D_{kn}\\cdot\\left((E_k'+A_{mk}'')^*(B_n'+B_n''e^{-i\\tau_m\\omega_n}) + E_k^*(B_n'+B_n''e^{-i\\tau_m\\omega_n})(B_p'+B_p''e^{-i\\tau_m\\omega_p})^*\\right)$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "4. SD\n",
+    "\n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = D_{nk}D_{kp}\\cdot 2(E_k'+A_{mk}'')(B_p'+B_p''e^{-i\\tau_m\\omega_p})$\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = D_{pk}D_{kn}\\cdot 2(E_k'+A_{mk}'')(B_n'+B_n''e^{-i\\tau_m\\omega_n})$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c419571",
+   "metadata": {},
+   "source": [
+    "### 2D-SI (with respect to pulse, cross-correlation setup)\n",
+    "\n",
+    "Same for all nonlinear methods\n",
+    "\n",
+    "$V_{zz} = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef8ecf7d",
+   "metadata": {},
+   "source": [
+    "### 2D-SI (with respect to gate-pulse $A_k/A_{mk}$)\n",
+    "\n",
+    "1. SHG  \n",
+    "\n",
+    "    $V_{zz}=0$\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "\n",
+    "    $V_{zz}=0$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG\n",
+    "\n",
+    "    $\\frac{d}{dA_p}\\left(\\frac{dS_{mk}}{dA_n}\\right)^* = D_{nk}D_{kp}\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')^*(B_p'+e^{-i\\tau_m\\omega_p}B_p'')\\cdot E_k^*$\n",
+    "\n",
+    "    $\\frac{d}{dA_p^*}\\left(\\frac{dS_{mk}}{dA_n^*}\\right)^* = D_{kn}D_{pk}\\cdot(B_n'+e^{-i\\tau_m\\omega_n}B_n'')(B_p'+e^{-i\\tau_m\\omega_p}B_p'')^*\\cdot E_k^*$\n",
     "\n",
     "<br>\n",
     "\n",
